blueman (1.10-2)

 * Remove bluetooth-sendto symlink, closes FS#16619.

 -- Abhishek Dasgupta <abhidg@gmail.com> Thu, 15 Oct 2009 14:52:56 +0000

blueman (1.10-1)

 * New upstream release
 * gconf>=2.0 moved to optdepends
 * added conflicts with bluez-gnome.

blueman (1.02-1)

 * New upstream release. gnome-python dependency no longer needed.

 * Added hicolor-icon-theme as dependency since blueman installs
   icons into /usr/share/icons/hicolor

 * blueman.install: call gtk-update-icon-cache in post_remove.

 * New symbolic link: /usr/bin/bluetooth-sendto -> /usr/bin/blueman-sendto

 -- Abhishek Dasgupta <abhidg@gmail.com> Thu, 26 Feb 2009 10:54:34 +0530

blueman (1.01-3)

 * Added dependency on 'gnome-python' (Closes #13347).

 -- Abhishek Dasgupta <abhidg@gmail.com> Thu, 19 Feb 2009 11:28:09 +0530

blueman (1.01-2)

 * Removed conflicts and replaces, and added warning to blueman.install.

 -- Abhishek Dasgupta <abhidg@gmail.com> Wed, 18 Feb 2009 09:49:51 +0530

blueman (1.01-1)

 * New upstream release.

 -- Abhishek Dasgupta <abhidg@gmail.com> Tue, 17 Feb 2009 17:16:08 +0530